Separate Application and Bootsrap logic

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
   <!-- Run our Elm app! -->
   <script>
-    Elm.fullscreen(Elm.NewIdentity);
+    Elm.fullscreen(Elm.Main);
   </script>
 </html>
